tests/NormalTests/paczka1/small_fuzzy/59842496.err
Error in line 6: TDBQ A1 75,9
Error in line 9: A2ZqYc S493 42,8
Error in line 13: ySNUxIOJj8 S493 62,49
Error in line 14: ySNUxIOJj8 S493 52,8
